--- a/img/index.html
+++ b/img/index.html
@@ -167,7 +167,7 @@ var App=typeof App==='undefined'?0:App;
 			</div>
 		</div>
 		
-		<div id="sectionRight" class="inset">
+		<!-- <div id="sectionRight" class="inset">
 			<!-- ad -->
 			<div class="ifNoAds" style="width:300px;text-align:center;padding:8px 0px;background:rgba(0,0,0,0.95);font-size:10px;opacity:0.5;text-shadow:0px 0px 2px #000,0px 1px 0px #000;text-align:center;">
 				Cookie Clicker is mainly supported by ads.<br>Consider unblocking our site or checking out our <a href="https://www.patreon.com/dashnet" target="_blank">Patreon</a>!
@@ -261,7 +261,7 @@ var App=typeof App==='undefined'?0:App;
 				</div>
 			</div>
 			<!-- /ad -->
-		</div>
+		</div> -->
 		
 		<div id="tooltipAnchor"><div id="tooltip" class="framed" onMouseOut="Game.tooltip.hide();"></div></div>
 		<div id="preloadImages" style="display:none;"></div>
